deploy/mailu/mailu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-front-nodeport
  namespace: mailu
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: front
    app.kubernetes.io/instance: mailu
    app.kubernetes.io/name: mailu
  ports:
    - name: pop3
      port: 110
      targetPort: 110
      nodePort: 30110 # Должен быть в диапазоне 30000-32767
      protocol: TCP
    - name: pop3s
      port: 995
      targetPort: 995
      nodePort: 30995 # В пределах допустимого диапазона
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080 # В пределах допустимого диапазона
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443 # В пределах допустимого диапазона
      protocol: TCP
  sessionAffinity: None
